apps/base/tdarr/tdarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tdarr
  namespace: app-tdarr
spec:
  selector:
    matchLabels:
      app: tdarr
  serviceName: tdarr
  replicas: 1
  template:
    metadata:
      labels:
        app: tdarr
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 1000
      containers:
        - name: tdarr
          image: ghcr.io/haveagitgat/tdarr:2.75.01
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "1000m"
              memory: 4Gi
            requests:
              cpu: "300m"
              memory: 64Mi
          ports:
            - containerPort: 8265
              name: ui
            - containerPort: 8266
              name: server
          volumeMounts:
            - mountPath: /app/configs
              name: config
            - mountPath: /app/server
              name: server
            - mountPath: /app/logs
              name: logs
            - mountPath: /movies
              name: movies
            - mountPath: /series
              name: series
            - mountPath: /transcode
              name: transcode
      volumes:
        - name: logs
          emptyDir: {}
        - name: server
          persistentVolumeClaim:
            claimName: tdarr-server
        - name: config
          persistentVolumeClaim:
            claimName: tdarr-config
        - name: movies
          hostPath:
            path: /mnt/spike/mass-storage/videos/movies
            type: Directory
        - name: series
          hostPath:
            path: /mnt/spike/mass-storage/videos/series
            type: Directory
        - name: transcode
          emptyDir:
            sizeLimit: 30Gi
      dnsConfig:
        options:
          - name: ndots
            value: "1"
