apps/base/tdarr/ingressroute.yaml
kind: Service
apiVersion: v1
metadata:
  name: tdarr
  namespace: app-tdarr
spec:
  selector:
    app: tdarr
  ports:
    - protocol: TCP
      name: ui
      port: 8265
    - protocol: TCP
      name: server
      port: 8266
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr
  namespace: app-tdarr

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`tdarr.cluster.arpa`)
      kind: Rule
      middlewares:
        - name: authelia-forwardauth
          namespace: app-authelia
      services:
        - name: tdarr
          namespace: app-tdarr
          port: ui
  tls:
    secretName: traefik-tls
